# microdados_rapido

./: .gitignore  README.md  pyproject.toml
microdados_rapido/: __init__.py  core.py  enem.py  loader.py  query.py
microdados_rapido.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
