[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microdados_rapido"
version = "0.1.0"
description = "Uma biblioteca para processar microdados do ENEM usando DuckDB e Parquet"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "duckdb",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
